# clarivate-c3-ai-api-client-python

./: README.md  pyproject.toml
examples/: sample.py
src/clarivate/aiapi/: aiapi_client.py  config.py
